disable debug mode

--- a/run_all.ipynb
+++ b/run_all.ipynb
@@ -2,19 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#importing all necessary packages and files\n",
     "import argparse\n",
     "from ConfigParser import SafeConfigParser\n",
     "import os\n",
     "from numpy import *\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "#image generator is used to simulate an image to sample\n",
     "import image_generator.image_generator as ig\n",
+    "\n",
+    "#multimodal nested sampling and self organizing map is used to sample the simulated image.\n",
     "import model_nest_som.model_nest_som as ns\n",
+    "\n",
+    "#finding clusters in sampled data\n",
     "import post_sampling.post_sampling as ps\n",
+    "\n",
     "import timeit"
    ]
   },
@@ -26,8 +46,54 @@
    },
    "outputs": [],
    "source": [
-    "start = timeit.default_timer()\n",
-    "newprefix = 4\n"
+    "#set the prefix for the run\n",
+    "prefix = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#accessing the configuration file\n",
+    "parser = SafeConfigParser()\n",
+    "parser.read(\"config.ini\")\n",
+    "\n",
+    "output_dir = parser.get(\"Misc\", \"location\") + \"/\" + str(prefix)\n",
+    "os.system('mkdir -p ' + output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#change prefix and write\n",
+    "parser.set(\"Misc\",\"prefix\",str(prefix))\n",
+    "\n",
+    "#setting plot to false to displable plotting after every 500 iteration\n",
+    "parser.set(\"Output\", \"plot\",\"False\")\n",
+    "fileout = \"files\"+\"/\"+str(prefix)+\"/\"+'config'+'_'+str(prefix)+'.ini'\n",
+    "F = open(fileout,'w')\n",
+    "parser.write(F)\n",
+    "F.close()"
    ]
   },
   {
@@ -36,84 +102,12 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "files/4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#read config.ini template\n",
-    "parser = SafeConfigParser()\n",
-    "#todo: do something about not using the relative path\n",
-    "parser.read(\"config.ini\")\n",
-    "\n",
-    "#image parameters\n",
-    "width = int(parser.get(\"Image\",\"width\"))\n",
-    "height = int(parser.get(\"Image\",\"height\"))\n",
-    "noise_lvl = float(parser.get(\"Image\", \"noise\"))\n",
-    "amp_min = float(parser.get(\"Image\", \"amp_min\"))\n",
-    "amp_max = float(parser.get(\"Image\", \"amp_max\"))\n",
-    "\n",
-    "rad_min = float(parser.get(\"Image\", \"rad_min\"))\n",
-    "rad_max = float(parser.get(\"Image\", \"rad_max\"))\n",
-    "num_sources = int(parser.get(\"Image\", \"num_items\"))\n",
-    "noise = float(parser.get(\"Image\", \"noise\"))\n",
-    "\n",
-    "prefix = newprefix\n",
-    "output_dir = parser.get(\"Misc\", \"location\") + \"/\" + str(prefix)\n",
-    "print output_dir\n",
-    "os.system('mkdir -p ' + output_dir)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
-    "#change prefix and write\n",
-    "parser.set(\"Misc\",\"prefix\",str(newprefix))\n",
-    "fileout=\"files\"+\"/\"+str(newprefix)+\"/\"+'config'+'_'+str(newprefix)+'.ini'\n",
-    "#fileout='config'+'_'+str(newprefix)+'.ini'\n",
-    "F=open(fileout,'w')\n",
-    "parser.write(F)\n",
-    "F.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "files/4\n"
-     ]
-    }
-   ],
-   "source": [
-    "ig.run(fileout)"
+    "#simulating a 200*200 pixel image\n",
+    "start1 = timeit.default_timer()\n",
+    "ig.run(fileout)\n",
+    "stop1 = timeit.default_timer()"
    ]
   },
   {
@@ -129,85 +123,82 @@
      "output_type": "stream",
      "text": [
       "done with active\n",
-      "0 50001 1 1\n",
-      "500 50001 1 1\n",
-      "1000 50001 1 1\n",
-      "1500 50001 1 1\n",
-      "2000 50001 1 1\n",
-      "2500 50001 1 1\n",
-      "3000 50001 1 1\n",
-      "3500 50001 1 1\n",
-      "4000 50001 1 1\n",
-      "4500 50001 1 1\n",
-      "5000 50001 1 1\n",
-      "5500 50001 1 1\n",
-      "6000 50001 1 1\n",
-      "6500 50001 1 1\n",
-      "7000 50001 1 1\n",
-      "7500 50001 1 1\n",
-      "8000 50001 1 1\n",
-      "8500 50001 1 1\n",
-      "9000 50001 1 1\n",
-      "9500 50001 1 1\n",
-      "10000 50001 1 1\n",
-      "10500 50001 1 1\n",
-      "11000 50001 1 1\n",
-      "11500 50001 1 1\n",
-      "12000 50001 1 1\n",
-      "12500 50001 1 1\n",
-      "13000 50001 1 1\n",
-      "13500 50001 1 1\n",
-      "14000 50001 1 1\n",
-      "14500 50001 1 1\n",
-      "15000 50001 1 1\n",
-      "15500 50001 1 1\n",
-      "16000 50001 1 1\n",
-      "16500 50001 1 1\n",
-      "17000 50001 1 1\n",
-      "17500 50001 1 1\n",
-      "18000 50001 1 1\n",
-      "18500 50001 1 1\n",
-      "19000 50001 1 1\n",
-      "19500 50001 1 1\n",
-      "20000 50001 1 1\n",
-      "20500 50001 2 2\n",
-      "21000 50001 3 3\n",
-      "21500 50001 5 5\n",
-      "22000 50001 6 6\n",
-      "22500 50001 7 7\n",
-      "23000 50001 7 7\n",
-      "23500 50001 7 7\n",
-      "24000 50001 7 7\n",
-      "24500 50001 7 7\n",
-      "25000 50001 7 7\n",
-      "25500 50001 6 7\n",
-      "76328 Log evaluations\n",
-      "wrote to file: files/3/3_processed_detected.txt\n",
-      "wrote to file: files/3/3_all_detected.txt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/pymodules/python2.7/matplotlib/cbook.py:122: MatplotlibDeprecationWarning: The normal aspect was deprecated in version 1.2. Use auto instead.\n",
-      "  warnings.warn(message, mplDeprecation, stacklevel=1)\n",
-      "/usr/lib/pymodules/python2.7/matplotlib/font_manager.py:1236: UserWarning: findfont: Font family ['sans-serif'] not found. Falling back to Bitstream Vera Sans\n",
-      "  (prop.get_family(), self.defaultFamily[fontext]))\n",
-      "/usr/lib/pymodules/python2.7/matplotlib/font_manager.py:1246: UserWarning: findfont: Could not match :family=Bitstream Vera Sans:style=normal:variant=normal:weight=normal:stretch=normal:size=12.0. Returning /usr/share/matplotlib/mpl-data/fonts/ttf/cmb10.ttf\n",
-      "  UserWarning)\n",
-      "/usr/lib/pymodules/python2.7/matplotlib/font_manager.py:1246: UserWarning: findfont: Could not match :family=Bitstream Vera Sans:style=normal:variant=normal:weight=normal:stretch=normal:size=10.0. Returning /usr/share/matplotlib/mpl-data/fonts/ttf/cmb10.ttf\n",
-      "  UserWarning)\n"
+      "0\n",
+      "500\n",
+      "1000\n",
+      "1500\n",
+      "2000\n",
+      "2500\n",
+      "3000\n",
+      "3500\n",
+      "4000\n",
+      "4500\n",
+      "5000\n",
+      "5500\n",
+      "6000\n",
+      "6500\n",
+      "7000\n",
+      "7500\n",
+      "8000\n",
+      "8500\n",
+      "9000\n",
+      "9500\n",
+      "10000\n",
+      "10500\n",
+      "11000\n",
+      "11500\n",
+      "12000\n",
+      "12500\n",
+      "13000\n",
+      "13500\n",
+      "14000\n",
+      "14500\n",
+      "15000\n",
+      "15500\n",
+      "16000\n",
+      "16500\n",
+      "17000\n",
+      "17500\n",
+      "18000\n",
+      "18500\n",
+      "19000\n",
+      "19500\n",
+      "20000\n",
+      "20500\n",
+      "21000\n",
+      "21500\n",
+      "22000\n",
+      "22500\n",
+      "23000\n",
+      "23500\n",
+      "24000\n",
+      "24500\n",
+      "25000\n",
+      "25500\n",
+      "26000\n",
+      "26500\n",
+      "27000\n",
+      "27500\n",
+      "28000\n",
+      "82298 Log evaluations\n",
+      "wrote to file: files/1/1_processed_detected.txt\n",
+      "wrote to file: files/1/1_all_detected.txt\n"
      ]
     }
    ],
    "source": [
-    "ns.run(fileout)\n"
+    "#sampling the image using multimodal nested sampling and self-organizing map \n",
+    "#self organizing map is used to better inform the sampler the location to sample in by identifying areas of \n",
+    "#higher likelihood and increasing the probability of the samplerto cover those regions.\n",
+    "\n",
+    "start2 = timeit.default_timer()\n",
+    "ns.run(fileout)\n",
+    "stop2 = timeit.default_timer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -217,29 +208,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "save\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/pymodules/python2.7/matplotlib/font_manager.py:1246: UserWarning: findfont: Could not match :family=Bitstream Vera Sans:style=normal:variant=normal:weight=normal:stretch=normal:size=11.0. Returning /usr/share/matplotlib/mpl-data/fonts/ttf/cmb10.ttf\n",
-      "  UserWarning)\n"
+      " TP:  6 FP:  3 Undetected:  4\n"
      ]
     }
    ],
    "source": [
-    "ps.run(fileout)"
+    "#working with the sampled data to fetch objects\n",
+    "#clustering methods are used to identify sources of high likehood.\n",
+    "start3 = timeit.default_timer()\n",
+    "ps.run(fileout)\n",
+    "image = \"files\"+\"/\"+str(prefix)+\"/\"+'clusters_active_points.png'\n",
+    "Image(filename=image) \n",
+    "stop3 = timeit.default_timer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -248,13 +233,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "444.91250205 seconds\n"
+      "Time taken 546.389490128 seconds\n"
      ]
     }
    ],
    "source": [
-    "stop = timeit.default_timer()\n",
-    "print stop - start, 'seconds'"
+    "#calculating the overall time taken\n",
+    "print \"Time taken\", (stop1 - start1) + (stop2 - start2) + (stop3 - start3), 'seconds'"
    ]
   },
   {
